CB-14782 Add role count validation to scaling and remove instances.